--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@ D-i-m-i work done on mask icons
         <!-- <div class="row"> -->
           <!-- <div class="col col-6"> -->
       <div style="display: flex; margin-bottom: 10px; justify-content: space-between; border-bottom: 1px solid black;">
-        <img src="images/airvica_logo_c.png" alt="airvica_logo" style="width: 13%; min-width: 120px; max-width: 210px; height: fit-content; margin: 10px">
+        <img src="images/airvica_logo_c.png" alt="airvica_logo" style="width: 13%; min-width: 80px; max-width: 210px; height: fit-content; margin: 10px">
         <div style="display: flex; align-items: center;">
           <h1 style="margin: 0 0 0 15px; font-size: calc(0.8em + 1.5vw); text-shadow: 2px 4px 3px rgba(0, 0, 0, 0.3);">Airborne Virus Risk Calculator</h1>
         </div>
         <!-- <div style="display: flex;"> -->
         <!-- <div style="display: flex; align-items: center;"> -->
-        <div style="text-align: right; width: 220px; display: flex; align-items: center;">
+        <div style="text-align: right; width: 220px; display: flex; align-items: center; margin-right: 10px">
           <img src="images/cardiff_logo_c.jpeg" alt="cardiff_uni_logo" style="width: var(--logo-width); height: var(--logo-height); min-width: var(--logo-min-width); margin: var(--logo-margin)">
           <img src="images/oxford_logo_c.png" alt="oxford_uni_logo" style="width: var(--logo-width); height: fit-content; min-width: var(--logo-min-width); margin: var(--logo-margin)">
         </div>
@@ -102,11 +102,11 @@ D-i-m-i work done on mask icons
     <div class=controls-plots-area style="margin-top: 30px;">
       <div style="display: flex; justify-content: space-between; flex-wrap: wrap;">
         <div style="display: flex; flex-direction: column;">
-        <h2>Parameters</h2>
+        <h2 class="h2-local">Parameters</h2>
         <!-- model inputs -->
         <div style="display: flex; justify-content: start; flex-direction: column;">
 
-          <div class="controls-card" style="width:438px; height:fit-content; min-height: 226px; margin-top: 0px">
+          <div class="controls-card" style="width:88vw; max-width: 400px; height:fit-content; min-height: 226px; margin-top: 0px">
             <div class="card-headings">
               <p class="h2-local">Ventilation</p>
               <span class="hovertext" text-hover="This is the placholder text for the card description">
@@ -144,7 +144,7 @@ D-i-m-i work done on mask icons
             </div>
           </div>
 
-          <div class="controls-card" style="width:438px; height:fit-content; min-height: 226px; margin-bottom: 20px;">
+          <div class="controls-card" style="width:88vw; max-width: 400px; height:fit-content; min-height: 226px; margin-bottom: 20px;">
             <div class="card-headings">
               <p class="h2-local">Event</p>
               <span class="hovertext" text-hover="This is the placholder text for the card description">
@@ -192,9 +192,9 @@ D-i-m-i work done on mask icons
       </div>
 
         <div style="display: flex; flex-direction: column;">
-          <div style="display: flex">
+          <div style="display: flex; justify-content: flex-start;">
             <div>
-              <h2>3D room and air circulation illustration</h2>
+              <h2 class="h2-local">3D room and air circulation illustration</h2>
             </div>
             <div style="margin-top: 5px;">
               <span class="hovertext" text-hover="This is the placholder text for the card description">
@@ -312,7 +312,7 @@ D-i-m-i work done on mask icons
       <br>
       <div style="display: flex; justify-content: space-between; flex-wrap: wrap;">
         <div style="display: flex; flex-direction: column;">
-          <div style="display: flex;">
+          <div style="display: flex; justify-content: flex-start;">
             <div>
               <p class="h2-local">Dynamic 2D room representation</p>
             </div>
@@ -349,7 +349,7 @@ D-i-m-i work done on mask icons
                 </div>
             </div>
             <div style="display: flex; flex-wrap: wrap;">
-              <div class="controls-card" style="margin-top: 0; margin-bottom: 10px; width: var(--room-cards-width);">
+              <div class="controls-card" style="margin-top: 0; margin-bottom: 10px; width: var(--room-cards-width); max-width: var(--room-cards-max-width);">
                 <div class="card-headings">
                   <p class="h2-local">Room dimensions</p>
                   <span class="hovertext" text-hover="This is the placholder text for the card description">
@@ -391,7 +391,7 @@ D-i-m-i work done on mask icons
                   </div>
                 </div>
               </div>
-              <div class="controls-card" style="display: flex; flex-direction: column; justify-content: space-between; margin-top: 0px; margin-bottom: 10px; width: var(--room-cards-width);">
+              <div class="controls-card" style="display: flex; flex-direction: column; justify-content: space-between; margin-top: 0px; margin-bottom: 10px; width: var(--room-cards-width); max-width: var(--room-cards-max-width);">
               <div class="card-headings">
                 <p class="h2-local">Infectious person</p>
                 <span class="hovertext" text-hover="This is the placholder text for the card description">
@@ -444,7 +444,7 @@ D-i-m-i work done on mask icons
                 </div>
               <!-- </div> -->
             </div>
-            <div class="controls-card" style="display: flex; flex-direction: column; justify-content: space-between; margin-top: 0px; width: var(--room-cards-width);">
+            <div class="controls-card" style="display: flex; flex-direction: column; justify-content: space-between; margin-top: 0px; width: var(--room-cards-width); max-width: var(--room-cards-max-width);">
               <div class="card-headings">
                 <p class="h2-local">Susceptible person</p>
                 <span class="hovertext" text-hover="This is the placholder text for the card description">
