plotly plots now responsive

--- a/index.html
+++ b/index.html
@@ -561,9 +561,9 @@ D-i-m-i work done on mask icons
                 <div>
                   <h3>Infection risk at the end of the event</h3>
                 </div>
-                <div id='inf-contour' class="chart" style="display:none; max-width: 55vw"> </div>
+                <div id='inf-contour' class="chart" style="display:none; max-width: 90vw; margin-left: -50px"> </div>
                   <!-- <div class="chart">
-                     <p id="chart_time"></p> 
+                     <p id="chart_time"></p>
                      <div id='inf-contour' style="display:none"> </div>
                   </div> -->
               </div>
@@ -587,11 +587,11 @@ D-i-m-i work done on mask icons
 
           <div class="chart_container">
           <div class="chart">
-          <div id="conc-output" style="display:none; max-width:45vw;"> </div>
+          <div id="conc-output" style="display:none; width:90vw; margin-left: -30px"> </div>
           </div>
 
           <div class="chart">
-          <div id="risk-output" style="display:none; max-width:45vw;"> </div>
+          <div id="risk-output" style="display:none; width:90vw; margin-left: -30px"> </div>
           </div>
 
           </div>
@@ -607,8 +607,8 @@ D-i-m-i work done on mask icons
           <div class="the-bar" id="C-contour-loading" style="display:none;">   </div>
         </div>
 
-        <div class="chart" id="conc_contour" style="display:none; max-width: 60vw;"> </div>
-        
+        <div class="chart" id="conc_contour" style="display:none; max-width: 90vw; margin-left: -45px; margin-top: 30px;"> </div>
+
         <!-- <br> -->
 
         <div style="margin-top: 30px;">
@@ -624,7 +624,7 @@ D-i-m-i work done on mask icons
           </div>
 
           <div class="chart">
-          <div id='C_avg-time' style="max-width: 60vw;"> </div>
+          <div id='C_avg-time' style="width: 90vw; margin-left: -30px"> </div>
           <span id="avg" style="display:none;"> </span>
           </div>
 
@@ -641,7 +641,7 @@ D-i-m-i work done on mask icons
           </div>
 
           <div class="chart">
-            <div id='P_avg-time' style="max-width: 60vw;"> </div>
+            <div id='P_avg-time' style="width: 90vw; margin-left: -30px;"> </div>
             <span id="purifier" style="display:none"> </span>
           </div>
       </div>
