--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@ D-i-m-i work done on mask icons
               </div>
               <!-- <div class="controls-alignment"> -->
                 <div class="control-padding">
-                  <label for='x0'>x</label>
+                  <label for='x0' style="font-size: 30px">&harr;</label>
                   <input type='range' id="x0" name="x0" min="0" value="2.5" max="5" step="0.01"
                   oninput="pass_source_coord();">
                   <!-- oninput, passX0 updates the infectious person dot-->
@@ -409,7 +409,7 @@ D-i-m-i work done on mask icons
                 </div>
 
                 <div class="control-padding">
-                  <label for='y0'>y</label>
+                  <label for='y0' style="font-size: 30px">&#8597;</label>
                   <input type='range' id="y0" name="y0" min="0" value="2.5" max="5" step="0.01"
                   oninput="pass_source_coord();">
                   <!-- oninput, passY0 updates the infectious person dot-->
@@ -455,14 +455,14 @@ D-i-m-i work done on mask icons
 
               <!-- <div class="controls-alignment"> -->
                 <div class="control-padding">
-                  <label for="x_e">x</label>
+                  <label for="x_e" style="font-size: 30px">&harr;</label>
                     <input type="range" id="x_e" name="x_e" min="0" max="5" value="1.25" step="0.01"
                     oninput="pass_sus_coord();">
                     <output>1.25</output>
                 </div>
 
                 <div class="control-padding">
-                  <label for="y_e">y</label>
+                  <label for="y_e" style="font-size: 30px">&#8597</label>
                     <input type="range" id="y_e" name="y_e" min="0" max="5" value="1.25" step="0.01"
                     oninput="pass_sus_coord();">
                     <output>1.25</output>
