created sans-serif version, updated 2D room and card responsiveness

--- a/index_sans_serif.html
+++ b/index_sans_serif.html
@@ -23,7 +23,7 @@ D-i-m-i work done on mask icons
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="sheet/webapp_style.css">
+    <link rel="stylesheet" href="sheet/webapp_style_sans_serif.css">
     <link rel="stylesheet" href="sheet/hovertext_style.css">
     <!-- CSS only -->
 
@@ -648,7 +648,7 @@ D-i-m-i work done on mask icons
           </div>
       </div>
       <footer style="margin-top: 10px">Credits</footer>
-      <a href="index_sans_serif.html" target="_blank">Click for Sans-Serif version</a>
+      <!-- <a href="index_sans_serif.html" target="_blank">Click for Sans-Serif version</a> -->
     </div>
       <script src='script/webapp_form.js'></script>
       <script src="script/webapp_room.js"></script>
